--- a/BinaryTree/BinaryTree.vcxproj
+++ b/BinaryTree/BinaryTree.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="BinaryTree.h" />
+    <ClInclude Include="BTIterator.h" />
     <ClInclude Include="BTNode.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
